2008-12-12  Martin Rudalics  <rudalics@gmx.at>

	* window.el (fit-window-to-buffer): Return non-nil when height
	was orderly adjusted, nil otherwise.

2008-12-12  Juanma Barranquero  <lekktu@gmail.com>
	    Stefan Monnier  <monnier@iro.umontreal.ca>

	* server.el (server-sentinel): Uncomment code to delete connection file.
	(server-start): Save the connection file in the server property list.
	Delete it only when we are reasonably convinced that it is not owned by
	a running server.
	(server-force-delete): New command to force-delete the connection file,
	and stop the server if it is running.
	(server-running-p): Return t also for local TCP servers when we find a
	process with a matching PID, and :other for undecided cases.

2008-12-11  Martin Rudalics  <rudalics@gmx.at>

	* window.el (fit-window-to-buffer): Use with-selected-window and
	condition-case.  Do not delete more windows than necessary in
	the shrinking (delta < 0) case.  Do not raise an error when the
	containing frame is too small to show all of buffer.  (Bug#1488)
	* dired.el (dired-pop-to-buffer): Call fit-window-to-buffer with
	min-height arg 1 to make sure that small buffers are shown.

2008-12-11  Juanma Barranquero  <lekktu@gmail.com>

	* progmodes/ruby-mode.el (ruby-mode-abbrev-table, ruby-mode-map)
	(ruby-mode-syntax-table, ruby-indent-tabs-mode, ruby-indent-level)
	(ruby-mode-variables, ruby-indent-line, ruby-indent-size)
	(ruby-calculate-indent, ruby-electric-brace, ruby-beginning-of-defun)
	(ruby-here-doc-beg-syntax, ruby-here-doc-end-syntax)
	(ruby-font-lock-syntax-table, ruby-font-lock-keywords)
	(ruby-end-of-defun, ruby-move-to-block, ruby-forward-sexp)
	(ruby-backward-sexp, ruby-add-log-current-method)
	(ruby-font-lock-syntactic-keywords, ruby-comment-beg-syntax)
	(ruby-in-here-doc-p, ruby-mode): Fix typos in docstrings.
	(ruby-deep-indent-paren): Doc fix.
	(ruby-insert-encoding-magic-comment): Remove * from docstring.
	(ruby-here-doc-find-end): Reflow docstring.
