@@ -1,3 +1,8 @@
+2008-12-13  Glenn Morris  <rgm@gnu.org>
+
+	* font-core.el (font-lock-defaults): Doc fix: mention levels;
+	refer to elisp manual.
+
 2008-12-12  Martin Rudalics  <rudalics@gmx.at>
 
 	* window.el (fit-window-to-buffer): Return non-nil when height
